Disable Identity API v2

--- a/devstack/conf/local.conf
+++ b/devstack/conf/local.conf
@@ -5,3 +5,5 @@ RABBIT_PASSWORD=$ADMIN_PASSWORD
 SERVICE_PASSWORD=$ADMIN_PASSWORD
 FIXED_RANGE=172.31.1.0/24
 FLOATING_RANGE=192.168.33.200/29
+# Identity API v2 is deprecated since Mitaka
+ENABLE_IDENTITY_V2=False
